--- a/assets/css/_menus.scss
+++ b/assets/css/_menus.scss
@@ -221,7 +221,7 @@ body.safari .menu {
 
     [dir='rtl'] & {
       left: auto;
-      right: 0;
+      right: 16px;
       padding-right: auto;
       padding-left: 3px;
       text-align: left;
